--- a/style.css
+++ b/style.css
@@ -111,10 +111,10 @@ nav.sticky .menu-btn{
 .home{
   height: 100vh;
   width: 100%;
-  background: url("background.png") no-repeat;
+  /* background: url("background.png") no-repeat;
   background-size: cover;
   background-position: center;
-  background-attachment: fixed;
+  background-attachment: fixed; */
   font-family: 'Ubuntu', sans-serif;
 }
 .home .home-content{
