--- a/style.css
+++ b/style.css
@@ -235,7 +235,7 @@ section  .topic{
 section .button{
   margin: 16px 0;
 }
-.download cv .button button{
+section .button button{
   outline: none;
   padding: 8px 16px;
   border-radius: 4px;
@@ -247,7 +247,7 @@ section .button{
   cursor: pointer;
   transition: all 0.4s ease;
 }
-.download cv .button button:hover{
+section .button button:hover{
   border-color: #4070f4;
   background-color: #fff;
   color: #4070f4;
